fix text bug, wordwrap

--- a/pyramid_blogr/static/theme.css
+++ b/pyramid_blogr/static/theme.css
@@ -111,6 +111,7 @@ label{
 	font: 12px/18px Arial, sans-serif;
 	color: #333;
 	margin: 0;
+    word-wrap: break-word;
 }
 
 @media (max-width: 400px) {
